--- a/index.ipynb
+++ b/index.ipynb
@@ -56,7 +56,7 @@
     "# Calculate sum of squared errors between regression and mean line \n",
     "import numpy as np\n",
     "\n",
-    "def sq_err(y_a, y_b):\n",
+    "def ss_res(y_a, y_b):\n",
     "    \"\"\"\n",
     "    input\n",
     "    y_a : true y values\n",
