Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -59,8 +59,8 @@
     "def ss_res(y_i, y_hat):\n",
     "    \"\"\"\n",
     "    input\n",
-    "    y_a : true y values\n",
-    "    y_b : regression line\n",
+    "    y_i : true y values\n",
+    "    y_hat : regression line\n",
     "\n",
     "    return\n",
     "    squared error between regression and true line (ss_tot)\n",
