--- a/index.ipynb
+++ b/index.ipynb
@@ -71,7 +71,7 @@
     "Y_i = np.array([1,3,5,7])\n",
     "Y_hat = np.array([1,4,5,8])\n",
     "\n",
-    "ss_err(Y_a, Y_b)\n",
+    "ss_res(Y_i, Y_hat)\n",
     "\n",
     "# 2"
    ]
