--- a/index.ipynb
+++ b/index.ipynb
@@ -69,9 +69,9 @@
     "\n",
     "# Check the output with some toy data\n",
     "Y_i = np.array([1,3,5,7])\n",
-    "Y_hat = np.array([1,4,5,8])\n",
+    "Y_b = np.array([1,4,5,8])\n",
     "\n",
-    "ss_res(Y_i, Y_hat)\n",
+    "sq_err(Y_a, Y_b)\n",
     "\n",
     "# 2"
    ]
