--- a/index.ipynb
+++ b/index.ipynb
@@ -56,11 +56,11 @@
     "# Calculate sum of squared errors between regression and mean line \n",
     "import numpy as np\n",
     "\n",
-    "def ss_res(y_i, y_hat):\n",
+    "def sq_err(y_a, y_b):\n",
     "    \"\"\"\n",
     "    input\n",
-    "    y_i : true y values\n",
-    "    y_hat : regression line\n",
+    "    y_a : true y values\n",
+    "    y_b : regression line\n",
     "\n",
     "    return\n",
     "    squared error between regression and true line (ss_tot)\n",
@@ -68,7 +68,7 @@
     "    \n",
     "\n",
     "# Check the output with some toy data\n",
-    "Y_i = np.array([1,3,5,7])\n",
+    "Y_a = np.array([1,3,5,7])\n",
     "Y_b = np.array([1,4,5,8])\n",
     "\n",
     "sq_err(Y_a, Y_b)\n",
