--- a/index.ipynb
+++ b/index.ipynb
@@ -65,7 +65,7 @@
     "    return\n",
     "    squared error between regression and true line (ss_tot)\n",
     "    \"\"\"\n",
-    "    \n",
+    "    return \n",
     "\n",
     "# Check the output with some toy data\n",
     "Y_a = np.array([1,3,5,7])\n",
