--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,7 @@
     "    return\n",
     "    r_squared value\n",
     "    \"\"\"\n",
-    "    return\n",
+    "    return 1- (sq_err())\n",
     "\n",
     "# Check the output with some toy data\n",
     "Y = np.array([1,3,5,7])\n",
